--- a/primeiro-projeto-node/package.json
+++ b/primeiro-projeto-node/package.json
@@ -4,10 +4,12 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsnd --transpileOnly src/server.ts --ignore-watch node_modules"
+    "dev:server": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "pg": "^8.3.2",
+    "typeorm": "^0.2.25",
     "typescript": "^3.9.7"
   },
   "devDependencies": {
@@ -21,6 +23,6 @@
     "eslint-plugin-import": "2.21.2",
     "eslint-plugin-prettier": "^3.1.4",
     "prettier": "^2.0.5",
-    "ts-node-dev": "^1.0.0-pre.56"
+    "ts-node-dev": "^1.0.0-pre.60"
   }
 }
