primeiro-projeto-node: Created first migration and table

--- a/primeiro-projeto-node/package.json
+++ b/primeiro-projeto-node/package.json
@@ -4,7 +4,10 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "dev:server": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts"
+    "build": "tsc",
+    "dev:server": "tsnd --transpile-only --ignore-watch node_modules --respawn src/server.ts",
+    "start": "ts-node src/index.ts",
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "express": "^4.17.1",
