--- a/primeiro-projeto-node/package.json
+++ b/primeiro-projeto-node/package.json
@@ -13,7 +13,8 @@
     "express": "^4.17.1",
     "pg": "^8.3.2",
     "typeorm": "^0.2.25",
-    "typescript": "^3.9.7"
+    "typescript": "^3.9.7",
+    "uuidv4": "^6.2.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.7",
