--- a/curso-de-javascript-moderno/babel e webpack/package.json
+++ b/curso-de-javascript-moderno/babel e webpack/package.json
@@ -11,6 +11,8 @@
     "@babel/core": "^7.11.6",
     "@babel/preset-env": "^7.11.5",
     "babel-loader": "^8.1.0",
+    "css-loader": "^4.3.0",
+    "style-loader": "^1.2.1",
     "webpack": "^4.44.1",
     "webpack-cli": "^3.3.12"
   },
